samples/_failures_safe/1761300796_6f2fe2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_919aebad.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_919aebad.c:166:40: error: expected ‘)’ at end of input
  166 |         lexer_read_number(lexer, &token
      |                          ~             ^
      |                                        )
./samples/SAFE/__tmp_919aebad.c:166:9: error: expected declaration or statement at end of input
  166 |         lexer_read_number(lexer, &token
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_919aebad.c:166:9: error: expected declaration or statement at end of input
